--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -17,6 +17,7 @@
   max-width: 1200px;
   margin: 0 auto;
   animation: fadeIn 1s ease-in-out;
+  padding:20px 5vh;
 }
 
 /* Footer Sections */
@@ -103,7 +104,7 @@
 
 .social-icon:hover {
   color: #FFC107;
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 /* Footer Bottom */
